<resources>

    <!-- Overall App Related -->
    <string name="app_name">Roshambo</string>
    <string name="app_version">0.0.4</string>
    <string name="app_copyright">Copyright \u00A9 2015 Hisha Tech</string>
<string
    name="hishatechPlayStoreURL">https://play.google.com/store/search?q=hishatech&amp;hl=en</string>
    <string name="hishatechString">Play Store: HishaTech</string>

    <!-- About Activity Related -->
    <string name="aboutAct">About</string>

    <!-- Main Activity Related -->
    <string name="beats"> beats </string>
    <string name="btnPlayAgain">Play Again</string>
    <string name="losesTo"> loses to </string>
    <string name="paper">Paper</string>
    <string name="rock">Rock</string>
    <string name="scissor">Scissor</string>
    <string name="ties"> ties </string>
    <string name="txtPlayAgain_Lose">Sorry you lost. Try again?</string>
    <string name="txtPlayAgain_Tie">Close but a tie. Try again?</string>
    <string name="txtPlayAgain_Win">Congrats you win! Try again?</string>

    <!-- Splash Activity Related -->
    <string name="secondline_activity_splash">Rock, Paper or Scissor,
        you decide.</string>
    <string name="url_activity_splash">www.hishatech.com</string>

    <!-- Stats Activity Related -->
    <string name="statsAct">Stats</string>
    <string name="totalGames">Total Games: </string>
    <string name="totalLosses">Total Losses: </string>
    <string name="totalTies">Total Ties: </string>
    <string name="totalWins">Total Wins: </string>

</resources>
