<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Begin StartUp Group -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/btnRock"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:id="@+id/btnPaper"
        android:text="@string/paper"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:id="@+id/btnRock"
        android:text="@string/rock"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnRock"
        android:layout_marginBottom="@dimen/button_vertical_margin"
        android:id="@+id/btnScissor"
        android:text="@string/scissor"/>
    <!-- End StartUp Group -->

    <!-- Begin Results Group -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/txtPlayAgain"
        android:layout_marginBottom="@dimen/textview_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtGameStatus"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/textview_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/txtPlayAgain"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtPlayAgain"
        android:id="@+id/btnPlayAgain"
        android:text="@string/btnPlayAgain"/>
    <!-- End Results Group -->

</RelativeLayout>